@@ -4,19 +4,25 @@ Hash: SHA256
 DIST file-5.12-magic-updates-4d53f0549fb40b179eaee53c63c42e1685e4ebab.patch.bz2 13636 SHA256 1694161e8a34d68fa481f362e5df81a06dee44678503f8a6113e42700c0b0ddb SHA512 641294ffb6f156dbcccf53afca4afa72fe7f2fcf7ff8c4b1815b62af3db805f761f0863948fbc435652053f7adca5a746197602c27fee1b1cca9523ab28bd152 WHIRLPOOL 2ed9ef157bddd35b7c93d4147b6dba180304676a6dfff1311ee06b9da8c3d042203c9b51c1c1f7d27502bdbe17e851b290ff313574440a034483fe9655bb2168
 DIST file-5.12.tar.gz 632808 SHA256 199d0dab2e32814cbced8dc30d3d2d5b7e45587598160a2c401358b573273d22 SHA512 eea292ea39256c0aede271676321e6076125b02bc8656d867f8d99caea4e54849e79840236c6f38f0024273d81c12cb87a966d1670da3fda77f7d739da3dd2f8 WHIRLPOOL 0d2b7733581afd65c71afdffb39f2d9693c5b29734d99c2f61d835756d522659dec2e35c50716a368c758cc7473835d646bd5638d2bb839edbb9393c97a19642
 DIST file-5.15.tar.gz 655932 SHA256 4bd52cc614d6488127c0bddc208a2855481744d76ff0878d9c173d2a6ed564e4 SHA512 390530832953c23099422c21b7159903fc6850999c6561b9d641318212d4c8e2bc768932cf8af0f545fac861a49f7389ce763b6e3b7d3832beba5281f0290e2b WHIRLPOOL 0a501f30a92b5f4dbaa66cb49caa5b8423d14b3bc4eda907124e5f530db164a3fcba829c6b9436680481af09e048a7930b20482ec227f465ef83938a2a0a9c1b
-EBUILD file-5.12-r1.ebuild 2523 SHA256 98b282cb8bdbc5fcf68f8c5d29cd45170cee15db67b4e34bdb9ef0e181964692 SHA512 220a29908beea1d2782829a9c18e851031533870e38d683114e5eba22bf3fab8729a952c8198d9da91d07b5b7e342c5d0484bb95755020730a4368feb1d2ebb0 WHIRLPOOL 8592fb38ae27df546824a745b89e8ceb1a750f464f4b9906734c7422cc07ac6443adae387daf65af6abe948676931f40246f83d27e5133f115d694afd8ab4352
-EBUILD file-5.15.ebuild 2361 SHA256 e2e65f11d6d7e8f006a5fd8baa28c4188af971ea170ccf825762035e2d5a901d SHA512 f7dd39997ac0b90d0a1f8b4126f95921f61eefbf31f83e2616c7859e2fcd37f8462622a03beb94a9dff84acc2d0d2f7cfd47480131f21ad749dc7e68ca6a5df6 WHIRLPOOL 4af469c6b8b592b5daea767900b717ab3cebe91b224a0004bc7071aec9b7652f10cc9cc239ab67bef83880841c37402b6a55fd255d89849b61c5545b054b8fda
-EBUILD file-9999.ebuild 2361 SHA256 85d22372402f812050ac7d9206c80b6159794044ba1a49d938a61d7e033f12ec SHA512 262dc0a861e0b18811583a58c08a832aba87c24cae8befd4fff14a7ea65a39e3db38bbf68290bbfb473c553dfa504790c4c259cd259459b34772006de45f6917 WHIRLPOOL 43467e08f0d855675f800d034a0aa11d15fe1148e3b3fbd4fc4307f860fb90150772c038ef967133e2c222d246826dbef488a25484e6b7b18e31ba612521c22b
-MISC ChangeLog 29915 SHA256 4c45a1de04b4c798fd201a6861a1ad799cf0353a4bb211b1921edc79014e900e SHA512 1125065951e42659477577b8e669abc583e1c1b9b401830751a346e50e1b6f6fd3fc537619a65b4874bd747533bd8c7369f474d2d66d70dfded2a55b040d6837 WHIRLPOOL f56c2241c0f3e47bb3974b32e925f4e91ef686ce052ab9ae05f81be4cecb17c84bf27691c21aafcb6d2028beff1fe5056f426c0e272149339bc7286e32a8084c
+EBUILD file-5.12-r1.ebuild 2560 SHA256 4a8dfaad82b6d172c5240460995334734154a880cbd9422d89e05a5d48491800 SHA512 fe1990834b705606a7e7b7cd5bcefa3b77b1250e391f0aa9c75374ba981eb37b14f4b8239dd99e302597032a61f4e6b34fcb1d3c1557bacb4daf88350a1bede5 WHIRLPOOL 3c01a66082d313c871e491884efc153a5b5d648d4d247e20d8a9d62fd7fbbf34223f843fb3039618d6a38b08d4e26381df4227dc1cb60ad2cae20d692590b6db
+EBUILD file-5.15.ebuild 2395 SHA256 ce0eaf3d50c6b012f17d9b1d1d1f3f4b7335900bf533770a65ac4a5f176f7e34 SHA512 bd8cdb5b48dcdb09b1fa2b4abb6db985d89395625afd6e8ec98be59ad5b7d1a91a1a53d3059ac592d4432cd053358933f09845bde65a85f434fd0d5d9eb955a2 WHIRLPOOL 78ecc749a6ab334d6365842eb2cc2947e21e6efc37668e283676e322d73aa1438f78b23d1c6b90a2fb41e8f4ceb601da616f73184f204818e8ddb553b9d8983b
+EBUILD file-9999.ebuild 2395 SHA256 6c268ca966dc66492eeed9b9c043f5c7885f9f9e2d5ee1786321933dda5720aa SHA512 36bf22dd664d4866dcf16ab35524ca6efc4f10fc19d734b06d99a82fd09b92cb5aa921bd3f65d96693379d2c0f81245bf91f93e0b67f06826cba2a0e8fc4f974 WHIRLPOOL f3dff4468979741fa10475a94193f528eccc0c4cabe905bad9aaa2afd21b2ed2736ea32489096465829257aa96b270956fecc6c6434fa1491e51fd73bb174407
+MISC ChangeLog 30097 SHA256 d1bf53f2018f781f8f8cb65f9a47e9720013c9d380853cfd552a7ef4c69920ce SHA512 244bb6c9dcf666d32ed1a63844a6724c1ee9b083d5d82021bebf84aa09228811da5e55e6e8aeb35aa0bc87b3a1069996f73a6e52b35428f019cc3bca0c2731ae WHIRLPOOL 16e6e4ea6b102ff54498c5e195a646016fb8a4390d64936566919e8b3347d388fc0ff124cf57260d66a58d6ba0f88e993450dbb2b5dd246a9993a82ea1bbc339
 MISC metadata.xml 227 SHA256 ecd74a3d9a250a8c5c597b45fd334ab26335074b687bc12f5a6fea32ef9f0690 SHA512 bf2e56b14ac89961c21f5eba6bf90e4f21fd001b88963bcf4c21d0ec63f7b860611bd8883b8760c2bc81dde2a9669456123033ca54337441016379f80e6029cf WHIRLPOOL 22c14f95d7a544f0c11e11136811724ebe69dc0c607073307a28446b1ebeb4ab8838180947a4f496f41648522e34b5dab71680c330a0085b774dbc9ea23ff647
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSRQ+aAAoJEEqz6FtPBkyj00YH/AvEgOspKkBGZPTVeipLpqED
-J4Ww/yAoLrR6CAlJJiKjmcQYI/UtgoSmkquJ30KvPrjKOu0e9iSwlelx7Z35M3E3
-ZUq2nwgmUBXM9IIhDhShBR79uWg/7HD79IgLZ+9EhaNVhUXETCUsoADPe6AthmkS
-hkKU2C/r190U4n75LOtydVdike6mqIe2zdxJuP328wde8YP9ceeGyVCGsn82gHaY
-43g2LS16PETASnIoQcsJKJiHPXYc9F2iKShKGHKT+I12mcvsOu5eEU8A+ivciBnF
-HUwaY5Qqg7HuJBUuuAJ363EfS46Y0PRfk6Ce8aPuoo5bWgvYj7lqDvU3otsGHM0=
-=5ZDP
+iQIcBAEBCAAGBQJSl59aAAoJELEHsLL7fEFW7tkQAMWhp3eYx9jFTx9SgtzP0+Lk
+lw82cdtLlFaTJVhqaTmEYRX1Vvtzq5ONgGeog3fkkja3e9jLlhVsTWNJaZS462CW
+9yZC3a2xEBrbDF90QoSwJcXgKdDrWv+OhKyoFeBn5/QAdZFvnZsHVmz2Er0ryvhv
+fxclriO8PXs+fhANhvnP3eVzo6IxMp+1e1cROBJVMAn0A2XDgaUHQMjBSHpeIqfD
+YZIhI7W6puFuk1dEhBfqSFc/SHJJmye7udc5V1saJLzt2O3yW1zyFB3l48/Xyocf
+G3XZ+CcQiSTB2Km0rUBNAeK4Scpm5OwHUTlaJgTJh8Q5xdxcpxAHn0B7Pvkcm8uX
+c8QMnD5RqHMkqp+l9XtpUKLME1YvdSBENai1C0ZdD++zFcW6UERsVrRmomKGMsCg
+ZNdac9Z9IJ+LYSFq9VJYB28EDCdGzXJ0Bkg9wqc+UBwGbSiwZ3rx7mLi/bVSzZXK
+bbZLO/PXSNSfjpiyhVpnJL9fvDCSfOdCjYME7fpd377MegQbap1AeB64ENt8Iehs
+4N/FEbSJdj5D/1/fV5rWkmM/9SMkI/psHk3FPN2OjHcajBJaiCx/wX2tsdH3XYMV
+Jn9Uxj7ChDQAV4nsbhE2DHrnig7KwpSETaUXqzYSYFg1+zmX+d1feRtwDwVpYmVn
+42bzrIwsqrsJ4lkoDlaN
+=oVEB
 -----END PGP SIGNATURE-----
