@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/Attic/file-5.12-r1.ebuild,v 1.10 2013/09/05 09:51:22 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/Attic/file-5.12-r1.ebuild,v 1.11 2013/11/28 19:53:24 vapier Exp $
 
 EAPI="2"
 PYTHON_DEPEND="python? *"
@@ -20,8 +20,9 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd"
 IUSE="python static-libs zlib"
 
-RDEPEND="zlib? ( sys-libs/zlib )"
-DEPEND="${RDEPEND}"
+DEPEND="zlib? ( sys-libs/zlib )"
+RDEPEND="${DEPEND}
+	python? ( !dev-python/python-magic )"
 
 PYTHON_MODNAME="magic.py"
 
