@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.245 2013/09/27 04:54:49 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.246 2013/11/28 19:53:24 vapier Exp $
+
+  28 Nov 2013; Mike Frysinger <vapier@gentoo.org> file-5.12-r1.ebuild,
+  file-5.15.ebuild, file-9999.ebuild:
+  Block dev-python/python-magic when USE=python #492718 by Andrei Slavoiu.
 
   27 Sep 2013; Tim Harder <radhermit@gentoo.org> -file-5.05.ebuild,
   -file-5.06.ebuild, -file-5.07.ebuild, -file-5.07-r1.ebuild,
